--- a/production-docker-compose.yml
+++ b/production-docker-compose.yml
@@ -8,7 +8,8 @@ services:
     environment:
       APP_ENV: production
       APP_KEY: ${APP_KEY}
-
+    volumes:
+      - laravel-storage-production:/var/www/storage
     restart: unless-stopped
     healthcheck:
       test: ["CMD-SHELL", "ls -l /var/www/laravel/public/build && test -f /var/www/laravel/public/build/manifest.json"]
@@ -29,11 +30,13 @@ services:
       context: .
       dockerfile: ./Docker/production/Dockerfile
       target: nginx
+
     ports:
       - "80:80"
       - "443:443"
     volumes:
       - /etc/letsencrypt:/etc/letsencrypt:ro
+      - laravel-storage-production:/var/www/storage:ro
     restart: unless-stopped
     depends_on:
       app:
@@ -70,5 +73,6 @@ services:
 
 volumes:
   db_data:
+  laravel-storage-production:
 networks:
   app-network:
