--- a/.env.example
+++ b/.env.example
@@ -19,14 +19,14 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=pgsql
-DB_HOST=postgres
-DB_PORT=5432
-DB_DATABASE=app
+DB_CONNECTION=mysql
+DB_HOST=ayar_db
+DB_PORT=3306
+DB_DATABASE=ayar_laravel_db
 DB_USERNAME=laravel
-DB_PASSWORD=secret
+DB_PASSWORD=ayarpassword
 
-SESSION_DRIVER=database
+SESSION_DRIVER=redis
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
 SESSION_PATH=/
@@ -42,7 +42,7 @@ CACHE_PREFIX=
 MEMCACHED_HOST=127.0.0.1
 
 REDIS_CLIENT=phpredis
-REDIS_HOST=127.0.0.1
+REDIS_HOST=redis
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
