--- a/Docker/production/nginx/nginx.conf
+++ b/Docker/production/nginx/nginx.conf
@@ -8,7 +8,7 @@ http {
     include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
 
-    sendfile        on;
+    sendfile on;
     keepalive_timeout  65;
 
     # Логи (можно настроить под себя)
@@ -40,19 +40,6 @@ http {
         root /var/www/laravel/public;
         index index.php index.html;
 
-        # Раздача статики (картинки, стили, скрипты и т.д.)
-        location ~* \.(?:jpg|jpeg|gif|png|ico|css|js|woff2?|ttf|svg|eot|otf|webp)$ {
-            expires 7d;
-            add_header Cache-Control "public";
-            access_log off;
-            try_files $uri =404;
-        }
-
-        # Доступ к storage (Laravel симлинк)
-        location /storage/ {
-            try_files $uri $uri/ =404;
-        }
-
         # Главный маршрут Laravel
         location / {
             try_files $uri $uri/ /index.php?$query_string;
@@ -65,7 +52,10 @@ http {
             fastcgi_index index.php;
             fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         }
-
+        location /storage/ {
+            alias /var/www/laravel/storage/app/public/;
+            try_files $uri $uri/ =404;
+        }
         # Безопасность — запрет скрытых файлов
         location ~ /\. {
             deny all;
