--- a/production-docker-compose.yml
+++ b/production-docker-compose.yml
@@ -18,10 +18,19 @@ services:
       ayar_db:
        condition: service_healthy
       redis:
-       condition: service_started
+       condition: service_healthy
     networks:
       - app-network
-
+  horizon:
+    build:
+      context: .
+      dockerfile: ./Docker/production/Dockerfile
+      target: php
+    container_name: laravel-horizon
+    command: php artisan horizon
+    depends_on:
+      redis:
+        condition: service_healthy
   nginx:
     build:
       context: .
