repair just supervisor

--- a/Docker/production/supervisor/supervisord.conf
+++ b/Docker/production/supervisor/supervisord.conf
@@ -3,5 +3,12 @@ nodaemon=true
 logfile=/var/www/laravel/storage/logs/supervisord.log
 loglevel=info
 
+[unix_http_server]
+file=/tmp/supervisor.sock
+chmod=0700
+
+[supervisorctl]
+serverurl=unix:///tmp/supervisor.sock
+
 [include]
 files = /etc/supervisor/conf.d/*.conf
