--- a/Docker/production/supervisor/supervisord.conf
+++ b/Docker/production/supervisor/supervisord.conf
@@ -7,6 +7,9 @@ loglevel=info
 file=/tmp/supervisor.sock
 chmod=0700
 
+[rpcinterface:supervisor]
+supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
+
 [supervisorctl]
 serverurl=unix:///tmp/supervisor.sock
 
