--- a/Docker/production/supervisor/php-fpm.conf
+++ b/Docker/production/supervisor/php-fpm.conf
@@ -1,5 +1,5 @@
 [program:php-fpm]
-command=/usr/sbin/php-fpm8.4 --nodaemonize
+command=/usr/sbin/php-fpm --nodaemonize
 autostart=true
 autorestart=true
 user=www-data
