--- a/Docker/production/nginx/nginx.conf
+++ b/Docker/production/nginx/nginx.conf
@@ -40,6 +40,7 @@ http {
         root /var/www/laravel/public;
         index index.php index.html;
 
+        client_max_body_size 50M;
         # Главный маршрут Laravel
         location / {
             try_files $uri $uri/ /index.php?$query_string;
