--- a/.env.example
+++ b/.env.example
@@ -26,7 +26,7 @@ DB_DATABASE=ayar_laravel_db
 DB_USERNAME=laravel
 DB_PASSWORD=ayarpassword
 
-SESSION_DRIVER=redis
+SESSION_DRIVER=database
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
 SESSION_PATH=/
