--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/horizon": "^5.33",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.10.1",
+        "maatwebsite/excel": "^3.1",
         "moonshine/moonshine": "^3.14",
         "propaganistas/laravel-phone": "^6.0",
         "tightenco/ziggy": "^2.0"
