add library to prod 2

--- a/Docker/production/Dockerfile
+++ b/Docker/production/Dockerfile
@@ -12,6 +12,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     libcurl4-openssl-dev \
     libicu-dev \
     libzip-dev \
+    libpng-dev \
     && docker-php-ext-install -j$(nproc) \
     pdo_mysql \
     opcache \
