--- a/Docker/production/Dockerfile
+++ b/Docker/production/Dockerfile
@@ -68,12 +68,12 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     supervisor \
     libicu-dev \
     libzip-dev \
-    libpng-dev \
-    libpng16-16 \
     libfcgi-bin \
+    libpng16-16 \
+    libfreetype6 \
+    libjpeg62-turbo \
     procps \
     && apt-get autoremove -y && apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* \
-    && docker-php-ext-install gd
 
 # Download and install php-fpm health check script
 RUN curl -o /usr/local/bin/php-fpm-healthcheck \
