--- a/Docker/production/Dockerfile
+++ b/Docker/production/Dockerfile
@@ -69,9 +69,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     libicu-dev \
     libzip-dev \
     libfcgi-bin \
-    libpng16-16 \
-    libfreetype6 \
-    libjpeg62-turbo \
+    libpng \
     procps \
     && apt-get autoremove -y && apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* \
 
