add library to prod 10

--- a/Docker/production/Dockerfile
+++ b/Docker/production/Dockerfile
@@ -69,7 +69,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     libicu-dev \
     libzip-dev \
     libfcgi-bin \
-    libpng \
+    libpng16-16 \
     procps \
     && apt-get autoremove -y && apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* \
 
