add library to prod 13

--- a/Docker/production/Dockerfile
+++ b/Docker/production/Dockerfile
@@ -66,8 +66,8 @@ RUN docker-php-ext-install pcntl
 RUN apt-get update && apt-get install -y --no-install-recommends \
     libpq5 \
     supervisor \
-    libicu72 \
-    libzip4 \
+    libicu-dev \
+    libzip-dev \
     libpng16-16 \
     libjpeg62-turbo \
     libfreetype6 \
@@ -75,6 +75,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     procps \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
+
 
 # Download and install php-fpm health check script
 RUN curl -o /usr/local/bin/php-fpm-healthcheck \
