add library to prod 14

--- a/Docker/production/Dockerfile
+++ b/Docker/production/Dockerfile
@@ -102,6 +102,8 @@ RUN mv "$PHP_INI_DIR/php.ini-production" "$PHP_INI_DIR/php.ini"
 
 # Enable PHP-FPM status page by modifying zz-docker.conf with sed
 RUN sed -i '/\[www\]/a pm.status_path = /status' /usr/local/etc/php-fpm.d/zz-docker.conf
+RUN sed -i 's|^listen =.*|listen = 0.0.0.0:9000|' /usr/local/etc/php-fpm.d/www.conf # new-line expression (commit or delete)
+
 # Update the variables_order to include E (for ENV)
 #RUN sed -i 's/variables_order = "GPCS"/variables_order = "EGPCS"/' "$PHP_INI_DIR/php.ini"
 
